<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_lab07</name>
  <version>0.0.0</version>
  <description>TurtleBot3 Lab07 - Autonomous Navigation with Nav2</description>
  <maintainer email="mmabas77@gmail.com">mmabas77</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_bringup</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_bringup</depend>
  <depend>turtlebot3_navigation2</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
